--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,5 @@ buildNumber.properties
 .flattened-pom.xml
 
 # End of https://www.gitignore.io/api/java,maven,intellij
+/SokobanSolver.iml
+/.idea/
