--- a/config.properties
+++ b/config.properties
@@ -3,20 +3,17 @@ heuristic = 1
 deadlockCheck = 1
 depth = 1
 iddfsInc = 1
-boardx = 14
-boardy = 13
-playerx = 5
-playery = 10
-board = xxxxx#####xxxx\
-        xxxxx#   #xxxx\
-        xxxxx#   #xxxx\
-        #### #   #xxxx\
-        #  ####$#####x\
-        #           #x\
-        # .## # ##. #x\
-        #           #x\
-        #####$####  #x\
-        xxx#   # ####x\
-        xxx# @ #xxxxxx\
-        xxx#   #xxxxxx\
-        xxx#####xxxxxx
+boardx = 15
+boardy = 10
+playerx = 7
+playery = 7
+board = xxxxxx###xxxxxx\
+        xxxxxx#.#xxxxxx\
+        xx#####.#####xx\
+        x##         ##x\
+        ##  # # # #  ##\
+        #  ##     ##  #\
+        # ##  # #  ## #\
+        #     $@$     #\
+        ####  ###  ####\
+        xxx#### ####xxx
