--- a/config.properties
+++ b/config.properties
@@ -1,19 +1,19 @@
-searchMethod = 2
-heuristic = 1
+searchMethod = 5
+heuristic = 4
 deadlockCheck = 1
-depth = 75
+depth = 1
 iddfsInc = 1
-boardx = 15
+boardx = 11
 boardy = 10
-playerx = 7
-playery = 7
-board = xxxxxx###xxxxxx\
-        xxxxxx#.#xxxxxx\
-        xx#####.#####xx\
-        x##         ##x\
-        ##  # # # #  ##\
-        #  ##     ##  #\
-        # ##  # #  ## #\
-        #     $@$     #\
-        ####  ###  ####\
-        xxx#### ####xxx
+playerx = 5
+playery = 8
+board = ########xxx\
+        #.#    #xxx\
+        #.# ## ####\
+        #.# $   $ #\
+        #.# # # # #\
+        #.# # # # #\
+        #   # #   #\
+        # $ $ # $ #\
+        #   #@  ###\
+        #########xx
