--- a/config2.properties
+++ b/config2.properties
@@ -1,19 +1,20 @@
-searchMethod = 4
-heuristic = 4
+searchMethod = 2
+heuristic = 1
 deadlockCheck = 1
-depth = 1
+depth = 75
 iddfsInc = 1
-boardx = 11
+boardx = 15
 boardy = 10
-playerx = 5
-playery = 8
-board = ########xxx\
-        #.#    #xxx\
-        #.# ## ####\
-        #.# $   $ #\
-        #.# # # # #\
-        #.# # # # #\
-        #   # #   #\
-        # $ $ # $ #\
-        #   #@  ###\
-        #########xx
+playerx = 7
+playery = 7
+board = xxxxxx###xxxxxx\
+        xxxxxx#.#xxxxxx\
+        xx#####.#####xx\
+        x##         ##x\
+        ##  # # # #  ##\
+        #  ##     ##  #\
+        # ##  # #  ## #\
+        #     $@$     #\
+        ####  ###  ####\
+        xxx#### ####xxx
+
