IDA* now printing + examples

--- a/config.properties
+++ b/config.properties
@@ -1,19 +1,26 @@
-searchMethod = 5
-heuristic = 4
+searchMethod = 6
+heuristic = 3
 deadlockCheck = 1
 depth = 1
 iddfsInc = 1
-boardx = 11
-boardy = 10
-playerx = 5
-playery = 8
-board = ########xxx\
-        #.#    #xxx\
-        #.# ## ####\
-        #.# $   $ #\
-        #.# # # # #\
-        #.# # # # #\
-        #   # #   #\
-        # $ $ # $ #\
-        #   #@  ###\
-        #########xx
+boardx = 17
+boardy = 17
+playerx = 9
+playery = 7
+board = ####### #####xxxx\
+#     # #   #xxxx\
+# ### ### # ###xx\
+#             #xx\
+### ### # ### #xx\
+xx# #         #xx\
+xx# # ####### ###\
+xx# $ #.#@# #   #\
+xx# # # # ### # #\
+xx#   #       # #\
+xx##### # # # # #\
+xxxx#   #     # #\
+xxxx# ### # # # #\
+xxxx#     #     #\
+xxxx####### # # #\
+xxxxxxxxxx#     #\
+xxxxxxxxxx#######
