--- a/config4.properties
+++ b/config4.properties
@@ -1,18 +1,16 @@
-searchMethod = 4
-heuristic = 1
+searchMethod = 3
+heuristic = 3
 deadlockCheck = 1
 depth = 1
 iddfsInc = 1
-boardx = 11
-boardy = 9
-playerx = 5
-playery = 7
-board = x#########x\
-        ##       ##\
-        x#   $   #x\
-        ## .   . ##\
-        # .$#$#$. #\
-        #  .   .  #\
-        # %#$#$#% #\
-        #    @    #\
-        ###########
+boardx = 7
+boardy = 7
+playerx = 3
+playery = 3
+board = x######\
+        ##....#\
+        #.$$$ #\
+        #.$@$ #\
+        #.$$$ #\
+        #.    #\
+        #######
