New parameter 'optimization' + IDDFS with optimization + IDA* with optimization + attribute getter in Sokoban

--- a/config2.properties
+++ b/config2.properties
@@ -1,7 +1,8 @@
-searchMethod = 2
-heuristic = 1
+searchMethod = 6
+heuristic = 3
 deadlockCheck = 1
-depth = 75
+optimization = 0
+depth = 50
 iddfsInc = 1
 boardx = 15
 boardy = 10
