--- a/config5.properties
+++ b/config5.properties
@@ -1,17 +1,18 @@
 searchMethod = 3
 heuristic = 3
 deadlockCheck = 1
+optimization = 1
 depth = 75
 iddfsInc = 1
 boardx = 8
 boardy = 8
 playerx = 6
 playery = 6
-board =########\
-#  #   #\
-#   $  #\
-#  #$$ #\
-## #   #\
-#.. $# #\
-#..   @#\
-########
+board = ########\
+        #  #   #\
+        #   $  #\
+        #  #$$ #\
+        ## #   #\
+        #.. $# #\
+        #..   @#\
+        ########
