--- a/config1.properties
+++ b/config1.properties
@@ -1,6 +1,7 @@
-searchMethod = 1
-heuristic = 1
+searchMethod = 6
+heuristic = 3
 deadlockCheck = 1
+optimization = 1
 depth = 1
 iddfsInc = 1
 boardx = 14
